--- a/.github/workflows/test_AMDShark.yml
+++ b/.github/workflows/test_AMDShark.yml
@@ -1,4 +1,4 @@
-name: Test SHARK
+name: Test AMDShark
 
 on:
   workflow_dispatch:
@@ -16,7 +16,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  test-shark:
+  test-AMDShark:
     strategy:
       matrix:
         version: [3.11]
@@ -29,11 +29,11 @@ jobs:
         with:
           python-version: ${{matrix.version}}
 
-      - name: "Checkout SHARK"
+      - name: "Checkout AMDShark"
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          repository: "nod-ai/SHARK.git"
-          path: SHARK
+          repository: "nod-ai/AMDShark.git"
+          path: AMDShark
           ref: "main"
 
       - name: "Checkout iree-turbine"
@@ -43,12 +43,12 @@ jobs:
           # TODO: Let the ref be passed as a parameter to run integration tests.
           path: iree-turbine
 
-      # TODO: Replace with a sh script from shark repo
-      - name: "Install SHARK"
+      # TODO: Replace with a sh script from AMDShark repo
+      - name: "Install AMDShark"
         run: |
-          cd $GITHUB_WORKSPACE/SHARK
-          python${{ matrix.version }} -m venv shark.venv
-          source shark.venv/bin/activate
+          cd $GITHUB_WORKSPACE/AMDShark
+          python${{ matrix.version }} -m venv AMDShark.venv
+          source AMDShark.venv/bin/activate
           pip install -r requirements.txt --no-cache-dir
           pip install -e .
-          python apps/shark_studio/tests/api_test.py
+          python apps/AMDShark_studio/tests/api_test.py
