--- a/.github/workflows/test_sdxl.yml
+++ b/.github/workflows/test_sdxl.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           python-version: ${{matrix.version}}
 
-      - name: "Checkout SHARK-ModelDev"
+      - name: "Checkout AMDShark-ModelDev"
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           ref: bump-punet-tom
