--- a/models/requirements.txt
+++ b/models/requirements.txt
@@ -4,7 +4,7 @@ transformers==4.50.0
 torchsde
 accelerate
 peft
-diffusers @ git+https://github.com/nod-ai/diffusers@0.29.0.dev0-shark
+diffusers @ git+https://github.com/nod-ai/diffusers@0.29.0.dev0-AMDShark
 brevitas @ git+https://github.com/Xilinx/brevitas.git@6695e8df7f6a2c7715b9ed69c4b78157376bb60b
 # turbine tank downloading/uploading
 azure-storage-blob
@@ -13,4 +13,4 @@ einops
 pytest
 scipy
 iree-turbine @ git+https://github.com/iree-org/iree-turbine.git@main
--e git+https://github.com/nod-ai/sharktank.git@main#egg=sharktank&subdirectory=sharktank
+-e git+https://github.com/nod-ai/AMDSharktank.git@main#egg=AMDSharktank&subdirectory=AMDSharktank
